Fix up deliver script

--- a/exercise.org
+++ b/exercise.org
@@ -22,6 +22,15 @@
   Keep in mind that this is just a high level sketch, omitting many details as well
   entire features (for instance branch logic)
 
+  *Important*
+  When you are done, use the provided ./deliver.sh script to pack up the archive.
+  If you're unable to run bash scripts then please ensure that you deliver a *zip* archive.
+  Not .rar or anything else, just use zip because my grading script knows how to handle that
+  in addition to the one used by deliver.sh
+  named after your username. Nothing more, nothing less, just your username.
+  This archive should be runnable as is, thus you need to include all the necessary files.
+  (I may or may not diff the tests to check if you're screwing with them)
+
   #+CAPTION: A very high level processor schematic. Registers, Instruction and data memory are already implemented.
   [[./Images/FiveStage.png]]
   
